--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,7 +52,7 @@ psycopg2-binary = "^2.9.5"
 django-allauth = "^0.54.0"
 django-countries = "^7.3.2"
 Pillow = "^10.0"
-gunicorn = "~=20.1.0"
+gunicorn = "^21.0"
 crispy-bootstrap4 = "^2022.1"
 
 [tool.poetry.group.dev.dependencies]
@@ -70,8 +70,6 @@ nox = "2023.4.22"
 flake8-docstrings = "^1.6.0"
 safety = "2.4.0b1"
 factory-boy = "^3.2.0"
-Sphinx = "6.2.1"
-sphinx-rtd-theme = "^1.2.0"
 coverage = { version = "^7.0.0", extras = ["toml"] }
 pytest-cov = "^4.0.0"
 pytest-django = "^4.5.2"
@@ -79,6 +77,7 @@ ruff = ">= 0.0.275, < 0.0.299"
 werkzeug = "^2.3.6"
 pyopenssl = "^23.2.0"
 djlint = "^1.31.1"
+furo = "^2023.7.26"
 
 [tool.black]
 line-length = 88
