--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,18 +39,18 @@ classifiers = [
 python = "^3.10"
 Django = "4.2.5"
 
-beautifulsoup4 = "^4.10.0"
-dj-database-url = "^2.0.0"
 django-crispy-forms = "^2.0"
+django-allauth = ">=0.54.0, < 0.60.0"
+environs = { version = "^9.5.0", extras = ["django"] }
 django-extensions = "^3.1.5"
+dj-database-url = "^2.0.0"
 django-heroku = "0.3.1"
 soupsieve = "^2.3.1"
 sqlparse = "^0.4.2"
 whitenoise = "^6.0.0"
-environs = { version = "^9.5.0", extras = ["django"] }
 psycopg2-binary = "^2.9.5"
-django-allauth = "^0.54.0"
 django-countries = "^7.3.2"
+beautifulsoup4 = "^4.10.0"
 Pillow = "^10.0"
 gunicorn = "^21.0"
 crispy-bootstrap4 = "^2022.1"
