--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,4 @@
-exclude: 'docs|node_modules|migrations|.git'
+exclude: 'node_modules|migrations|.git'
 fail_fast: true
 
 repos:
@@ -28,25 +28,30 @@ repos:
         files: (^|/)a/.+\.(py|html|sh|css|js)$
 
   - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.1.8
+    rev: v0.1.9
     hooks:
     - id: ruff
       args: [ --fix, --exit-non-zero-on-fix ]
 
   - repo: https://github.com/psf/black
-    rev: 23.12.0
+    rev: 23.12.1
     hooks:
     - id: black
       name: black
       exclude: ^.*\b(migrations)\b.*$
 
   - repo: https://github.com/Riverside-Healthcare/djLint
-    rev: v1.34.0
+    rev: v1.34.1
     hooks:
     - id: djlint-reformat-django
       exclude: "htmlcov"
     - id: djlint-django
       exclude: "htmlcov"
+
+  - repo: https://github.com/sphinx-contrib/sphinx-lint
+    rev: v0.9.1
+    hooks:
+    - id: sphinx-lint
 
   - repo: https://github.com/python-poetry/poetry
     rev: 1.7.0
