--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,6 +77,7 @@ pyopenssl = "^23.2.0"
 djlint = "^1.31.1"
 sphinx = ">= 7.2.5, < 7.3.0"
 furo = "^2023.7.26"
+sphinx-lint = "^0.9.1"
 
 [tool.black]
 line-length = 88
