--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,10 +36,10 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.10"
-Django = "5.0.1"
+Django = "5.0.2"
 
 django-crispy-forms = "^2.0"
-django-allauth = ">=0.60, < 0.61"
+django-allauth = ">=0.60.0, <= 0.70.0"
 environs = { version = "^10", extras = ["django"] }
 django-extensions = "^3.1.5"
 dj-database-url = "^2.0.0"
