--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,4 @@
-exclude: 'node_modules|migrations|.git'
+exclude: 'htmlcov|node_modules|migrations|staticfiles|.git'
 fail_fast: true
 
 repos:
@@ -30,28 +30,31 @@ repos:
   - repo: https://github.com/charliermarsh/ruff-pre-commit
     rev: v0.2.2
     hooks:
-    - id: ruff
-      args: [ --fix, --exit-non-zero-on-fix ]
+      # Run the linter
+      - id: ruff
+        args: [ --fix, --exit-non-zero-on-fix ]
+      # Run the formatter
+      - id: ruff-format
 
   - repo: https://github.com/psf/black
     rev: 24.2.0
     hooks:
-    - id: black
-      name: black
-      exclude: ^.*\b(migrations)\b.*$
+      - id: black
+        name: black
+        exclude: ^.*\b(migrations)\b.*$
 
   - repo: https://github.com/Riverside-Healthcare/djLint
     rev: v1.34.1
     hooks:
-    - id: djlint-reformat-django
-      exclude: "htmlcov"
-    - id: djlint-django
-      exclude: "htmlcov"
+      - id: djlint-reformat-django
+        exclude: "htmlcov"
+      - id: djlint-django
+        exclude: "htmlcov"
 
   - repo: https://github.com/sphinx-contrib/sphinx-lint
     rev: v0.9.1
     hooks:
-    - id: sphinx-lint
+      - id: sphinx-lint
 
   - repo: https://github.com/python-poetry/poetry
     rev: 1.7.0
