--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,49 +39,49 @@ python = "^3.10"
 Django = "5.0.2"
 
 django-crispy-forms = "^2.0"
-django-allauth = ">=0.60.0, <= 0.70.0"
+django-allauth = ">=0.60.0, < 0.70"
 environs = { version = "^10", extras = ["django"] }
-django-extensions = "^3.1.5"
+django-extensions = "^3.2"
+psycopg2-binary = "^2.9.5"
+whitenoise = "^6.1.0"
+gunicorn = "^21.0"
+Pillow = "^10.0"
+django-countries = "^7.3.2"
+crispy-bootstrap4 = "^2023.1"
 dj-database-url = "^2.0.0"
-django-heroku = "0.3.1"
 soupsieve = "^2.3.1"
 sqlparse = "^0.4.2"
-whitenoise = "^6.0.0"
-psycopg2-binary = "^2.9.5"
-django-countries = "^7.3.2"
 beautifulsoup4 = "^4.10.0"
-Pillow = "^10.0"
-gunicorn = "^21.0"
-crispy-bootstrap4 = "^2023.1"
-django-types = "^0.19.0"
 
 [tool.poetry.group.dev.dependencies]
 django-debug-toolbar = "^4.0.0"
 pre-commit = "^3.0.0"
-black = "^24.0.0"
+ruff = ">=0.1.0, <=0.2.9"
+nox = "2023.4.22"
+black = "^24.0"
 pytest = "^8.0"
 pytest-cov = "^4.0.0"
 pytest-django = "^4.5.2"
 pytest-sugar = "^1.0"
+coverage = { version = "^7.0.0", extras = ["toml"] }
+django-coverage-plugin = "^3.0.0"
+djlint = "^1.31.0"
+sphinx-lint = "^0.9.1"
+safety = "^3.0"
+factory-boy = "^3.2.0"
 ipython = "^8.4.0"
 friendly = "^0.7.0"
 colorama = "^0.4.4"
-django-coverage-plugin = "^3.0.0"
-nox = "2023.4.22"
-safety = "^3.0"
-factory-boy = "^3.2.0"
-coverage = { version = "^7.0.0", extras = ["toml"] }
-ruff = "^0.1.0"
 werkzeug = "^3.0"
-pyopenssl = "^24.0"
-djlint = "^1.31.1"
+pyopenssl = ">=24.0, < 25.0"
 sphinx = ">= 7.2.5, < 7.3.0"
 furo = "^2024.0"
-sphinx-lint = "^0.9.1"
+django-types = "^0.19.0"
 
 [tool.black]
 line-length = 88
-# include =
+# include = [
+#]
 exclude = '''
 /(
     \.git
@@ -97,6 +97,7 @@ exclude = '''
 
 [tool.coverage.run]
 branch = true
+dynamic_context = "test_function"
 source = ["accounts", "config", "learning_logs", "pages"]
 omit = [
     "conftest.py",
@@ -116,18 +117,25 @@ plugins = [
 ]
 
 [tool.coverage.django_coverage_plugin]
-template_extensions = "html, txt, tex, email"
+template_extensions = "html"
 
 [tool.coverage.report]
 show_missing = true
+precision = 2
+
+[tool.coverage.html]
+show_contexts = true
+title = "learning-log coverage report"
 
 [tool.djlint]
-exclude="htmlcov"
+exclude=["htmlcov", "staticfiles"]
 files=["templates/"]
 indent=2
+max_line_length=120
 preserve_blank_lines=true
 
 [tool.pyright]
+# See: https://github.com/microsoft/pyright/blob/main/docs/configuration.md
 include = ["config", "accounts", "pages", "learning_logs",]
 exclude = ["**/tests",
     "**/__pycache__",
@@ -136,8 +144,12 @@ exclude = ["**/tests",
 ignore = ["docs/_build"]
 defineConstant = { DEBUG = true }
 stubPath = ""
+# The following may need to be modified when collaborating with others
 venv = "learning-log-3s6_931d-py3.12"
 venvPath = "../../../venvs"
+# More portable venv config
+# venvPath = "."
+# venv = ".venv"
 
 typeCheckingMode = "basic"
 useLibraryCodeForTypes = true
@@ -168,15 +180,39 @@ DJANGO_SETTINGS_MODULE = "config.test"
 # Otherwise, tests will generate an error:...exceptions.ImproperlyConfigured...
 # addopts = "-p no:warnings"
 addopts = "--reuse-db -p no:warnings"
-python_files = ["tests.py", "test_*.py", "*_tests.py"]
+python_files = ["test_*.py"]
 filterwarnings = [
-    "ignore::django.utils.deprecation.RemovedInDjango50Warning",
     "ignore::django.utils.deprecation.RemovedInDjango51Warning",
 ]
 
 [tool.ruff]
 preview = true
+respect-gitignore = true
 unsafe-fixes = false
+
+# Same as Black.
+line-length = 88
+indent-width = 4
+
+# Assume Python 3.12.x
+target-version = "py312"
+
+# Exclude a variety of commonly ignored directories.
+exclude = [
+    ".git",
+    # ".mypy_cache",
+    # ".nox",
+    # ".pytest_cache",
+    # ".ruff_cache",
+    # "__pycache__",
+    # "__pypackages__",
+    "htmlcov",
+    "migrations",
+    "images",
+    "media",
+]
+
+[tool.ruff.lint]
 select = [
     "B",    # flake8-bugbear
     "C90",  # mccabe
@@ -201,37 +237,10 @@ ignore = [
 fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
 unfixable = []
 
-# Exclude a variety of commonly ignored directories.
-exclude = [
-    ".git",
-    ".mypy_cache",
-    ".nox",
-    ".pytest_cache",
-    ".ruff_cache",
-    ".venv",
-    "__pycache__",
-    "__pypackages__",
-    "htmlcov",
-    "migrations",
-    "_build",
-    "build",
-    "dist",
-    "images",
-    "media",
-    "node_modules",
-    "venv",
-]
-
-# Same as Black.
-line-length = 88
-
 # Allow unused variables when underscore-prefixed.
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
-# Assume Python 3.12.
-target-version = "py311"
-
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 # "accounts/tests/factories.py" = ["BLK100"] (Not supported)
 # "accounts/tests/*" = ["BLK100"] (Not supported)
 "accounts/tests/*" = ["S101", "S106"]
@@ -239,9 +248,36 @@ target-version = "py311"
 "pages/tests/*" = ["S101", "S106"]
 "learning_logs/tests/*" = ["S101", "S106"]
 
-[tool.ruff.mccabe]
+[tool.ruff.lint.mccabe]
 # Unlike Flake8, default to a complexity level of 10.
 max-complexity = 10
+
+[tool.ruff.format]
+# Like Black, use double quotes for strings.
+quote-style = "double"
+
+# Like Black, indent with spaces, rather than tabs.
+indent-style = "space"
+
+# Like Black, repspect magic trailing commas.
+skip-magic-trailing-comma = false
+
+# Like Black, automatically detect the appropriate line ending.
+line-ending = "auto"
+
+# Enable auto-formatting of code examples in docstrings. Markdown,
+# reStructuredText code/literal blocks and doctests are all supported.
+#
+# This is currently disabled by default, but it is planned for this
+# to be opt-out in the future.
+docstring-code-format = false
+
+# Set the line length limit used when formatting code snippets in
+# docstrings.
+#
+# This only has an effect when the `docstring-code-format` setting is
+# enabled.
+docstring-code-line-length = "dynamic"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
