--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,12 @@ homepage = "https://github.com/kevinbowen777/learning-log.git"
 repository = "https://github.com/kevinbowen777/learning-log.git"
 documentation = "file:///docs/index.rst"
 
-keywords = ["diary", "django", "web-application", "learning-log"]
+keywords = [
+    "diary",
+    "django",
+    "web-application",
+    "learning-log",
+]
 
 classifiers = [
     "Development Status :: 4 - Beta",
@@ -36,7 +41,7 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.10"
-Django = "5.0.2"
+Django = "5.0.3"
 
 django-allauth = ">=0.60.0, < 0.70"
 environs = { version = "^10", extras = ["django"] }
@@ -80,7 +85,12 @@ django-types = "^0.19.0"
 [tool.coverage.run]
 branch = true
 dynamic_context = "test_function"
-source = ["accounts", "config", "learning_logs", "pages"]
+source = [
+    "accounts",
+    "config",
+    "learning_logs",
+    "pages",
+]
 omit = [
     "conftest.py",
     "manage.py",
@@ -118,7 +128,12 @@ preserve_blank_lines = true
 
 [tool.pyright]
 # See: https://github.com/microsoft/pyright/blob/main/docs/configuration.md
-include = ["config", "accounts", "pages", "learning_logs",]
+include = [
+    "config",
+    "accounts",
+    "pages",
+    "learning_logs",
+]
 exclude = [
     "**/tests",
     "**/__pycache__",
