--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,7 +64,7 @@ pre-commit = "^3.0.0"
 ruff = ">=0.1.0, <=0.3.9"
 nox = "2024.3.2"
 pytest = "^8.0"
-pytest-cov = "^4.0.0"
+pytest-cov = ">=5.0, <6.0"
 pytest-django = "^4.5.2"
 pytest-sugar = "^1.0"
 coverage = { version = "^7.0.0", extras = ["toml"] }
