--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ classifiers = [
     "Development Status :: 4 - Beta",
     "Environment :: Web Environment",
     "Framework :: Django",
-    "Framework :: Django :: 5.0",
+    "Framework :: Django :: 5.1",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
@@ -73,7 +73,8 @@ pytest-sugar = "^1.0"
 coverage = { version = "^7.0.0", extras = ["toml"] }
 django-coverage-plugin = "^3.0.0"
 djlint = "^1.31.0"
-sphinx-lint = "^0.9.1"
+sphinx = ">= 8.0, < 9.0"
+sphinx-lint = "1.0"
 safety = "^3.0"
 factory-boy = "^3.2.0"
 ipython = "^8.4.0"
@@ -81,7 +82,6 @@ friendly = "^0.7.0"
 colorama = "^0.4.4"
 werkzeug = "3.0.4"
 pyopenssl = ">=24.0, < 25.0"
-sphinx = ">= 7.3, < 7.4"
 furo = "^2024.0"
 django-types = "^0.19.0"
 
