--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,7 @@ beautifulsoup4 = "^4.10.0"
 
 [tool.poetry.group.dev.dependencies]
 django-debug-toolbar = "^4.0.0"
-pre-commit = "^3.0.0"
+pre-commit = ">=4.0, <5.0"
 ruff = ">=0.6, <=0.6.9"
 nox = "2024.10.09"
 pytest = "^8.0"
