--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,7 +80,7 @@ factory-boy = "^3.2.0"
 ipython = "^8.4.0"
 friendly = "^0.7.0"
 colorama = "^0.4.4"
-werkzeug = "3.0.4"
+werkzeug = ">=3.1, <4.0"
 pyopenssl = ">=24.0, <25.0"
 furo = "^2024.0"
 django-types = "^0.19.0"
