--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,7 +64,7 @@ beautifulsoup4 = "^4.10.0"
 [tool.poetry.group.dev.dependencies]
 django-debug-toolbar = "^4.0.0"
 pre-commit = ">=4.0, <5.0"
-ruff = ">=0.6, <=0.6.9"
+ruff = ">=0.7, <0.8"
 nox = "2024.10.09"
 pytest = "^8.0"
 pytest-cov = ">=5.0, <6.0"
