--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.10"
-Django = "5.1.3"
+Django = "5.1.4"
 
 django-allauth = ">=65.0, <66.0.0"
 environs = { version = "^11", extras = ["django"] }
@@ -80,7 +80,7 @@ factory-boy = "^3.2.0"
 werkzeug = ">=3.1, <4.0"
 pyopenssl = ">=24.0, <25.0"
 furo = "^2024.0"
-django-types = "^0.19.0"
+django-types = ">=0.20.0, <0.21.0"
 
 [tool.coverage.run]
 branch = true
